# generative-quant-vision

./: .gitignore  CMakeLists.txt  README.md  app.py  autoencoder_model.py  benchmark_python.py  dataset_builder.py  gradcam_visualizer.py  main.cpp  requirements.txt  train.py  train_classifier.py  train_vae.py  vae_model.py
Modeles/: quant_classifier_cpp.pt  quant_gaf_autoencoder.pth  quant_vae.pth
